@@ -14,13 +14,13 @@
             "rct2.scenery_small.ts2",
             "fidwell.scenery_small.ts2",
             "rct2.scenery_small.ts3",
-            "$DAT:0C58B401|IRETS3C ",
+            "fidwell.scenery_small.ts3",
             "rct2.scenery_small.ts4",
-            "$DAT:0C58B401|IRECTS4C",
+            "fidwell.scenery_small.ts4",
             "rct2.scenery_small.ts5",
-            "$DAT:0C58B401|IRECTS5C",
+            "fidwell.scenery_small.ts5",
             "rct2.scenery_small.ts6",
-            "$DAT:0C58B401|IRECTS6C",
+            "fidwell.scenery_small.ts6",
             "rct2.scenery_small.tef",
             "rct2.scenery_small.tal",
             "$DAT:0C58B301|IRALTALC",
