@@ -109,6 +109,10 @@
 - Updated object: Tree (rct2.scenery_small.ts0)
 - Updated object: Tree (rct2.scenery_small.ts1)
 - Updated object: Tree (rct2.scenery_small.ts2)
+- Updated object: Tree (rct2.scenery_small.ts3)
+- Updated object: Tree (rct2.scenery_small.ts4)
+- Updated object: Tree (rct2.scenery_small.ts5)
+- Updated object: Tree (rct2.scenery_small.ts6)
 - Updated object: Giraffe Statue (rct2.scenery_small.tgs)
 - Updated object: Roof (rct2.scenery_small.sumrf)
 - Updated object: Roman Colosseum (rct2.scenery_large.scol)
